--- a/sns_php/public_html/css/styles.css
+++ b/sns_php/public_html/css/styles.css
@@ -49,6 +49,8 @@ img#img {
 
 input[type=text],
 input[type=password],
+input[type=tel],
+input[type=email],
 select {
   padding:5px;
   border-radius:4px;
